# libmerlin

./: Cargo.toml  README.md  build.rs
src/: keccak-tiny.c  lib.rs  merlin.c  merlin.h
