[package]
name = "merlin-c"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"
description = "A single-file C library providing Merlin transcripts."

[dependencies]

[dev-dependencies]
rand = "0.6"
keccak = "0.1"
merlin = "1.0"

[build-dependencies]
cc = "1.0"

